  documented and skips help buffers if run from a non-help buffer, otherwise
  it moves to another help buffer.
• Bells from a |terminal| buffer are now silent by default, unless 'belloff'
  option doesn't contain "term" or "all".

EVENTS

• |vim.ui_attach()| callbacks for |ui-messages| `msg_show` events are executed in
  |api-fast| context.

HIGHLIGHTS

• |TermCursorNC| is removed and no longer supported. Unfocused terminals no
  longer have a cursor.

LSP

• Improved rendering of LSP hover docs. |K-lsp-default|
• |vim.lsp.completion.enable()| gained the `convert` callback which enables
  customizing the transformation of an LSP CompletionItem to |complete-items|.
• |vim.lsp.diagnostic.from()| can be used to convert a list of
  |vim.Diagnostic| objects into their LSP diagnostic representation.
• |vim.lsp.buf.references()|, |vim.lsp.buf.declaration()|, |vim.lsp.buf.definition()|,
  |vim.lsp.buf.type_definition()|, |vim.lsp.buf.implementation()| and
  |vim.lsp.buf.hover()| now support merging the results of multiple clients
  but no longer trigger the global handlers from `vim.lsp.handlers`
• |vim.lsp.buf.typehierarchy()| now passes the correct params for each
  client request.
• |vim.lsp.handlers.signature_help()| is no longer used.
• |vim.lsp.diagnostic.on_publish_diagnostics()| and
  |vim.lsp.diagnostic.on_diagnostic()| no longer accept a config parameter and
  can no longer be configured with |vim.lsp.with()|.
  Instead use: >lua
    vim.diagnostic.config(config, vim.lsp.diagnostic.get_namespace(client_id))
<
• |vim.lsp.util.make_position_params()|, |vim.lsp.util.make_range_params()|
  and |vim.lsp.util.make_given_range_params()| now require the `position_encoding`
  parameter.
• `:checkhealth vim.lsp` displays the server version (if available).

LUA

• API functions now consistently return an empty dictionary as
  |vim.empty_dict()|. Earlier, a |lua-special-tbl| was sometimes used.
• Command-line completions for: `vim.g`, `vim.t`, `vim.w`, `vim.b`, `vim.v`,